<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mad"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="384dp"
        android:layout_height="44dp"
        android:layout_marginTop="184dp"
        android:background="@color/c12"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@color/c12"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/c6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fogotpassword" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="291dp"
        android:layout_height="27dp"
        android:background="@color/loginlinkbtnC"
        android:text="@string/btn_signup"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:backgroundTint="@color/loginlinkbtnC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_loginLink" />

    <TextView
        android:id="@+id/txt_loginLink"
        android:layout_width="150dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txt_loginLink"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_fogotpassword"
        android:layout_width="278dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_fogotpassword"
        android:textColor="@android:color/widget_edittext_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="258dp"
        android:layout_height="139dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos" />

</androidx.constraintlayout.widget.ConstraintLayout>