<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mad"
    tools:context=".eligibility">

    <EditText
        android:id="@+id/name1"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="296dp"
        android:background="@color/c12"
        android:ems="10"
        android:hint="@string/name1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age1"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@color/c12"
        android:ems="10"
        android:hint="@string/age1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name1" />

    <Button
        android:id="@+id/btn_calculation"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/btn_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age1" />

    <TextView
        android:id="@+id/txt_answer"
        android:layout_width="372dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt_answer"
        android:textColor="@color/ans"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculation" />

</androidx.constraintlayout.widget.ConstraintLayout>