<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mad"
    tools:context=".eligibility">

    <TextView
        android:id="@+id/txt_elg"
        android:layout_width="347dp"
        android:layout_height="166dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/txt_elg"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:background="@color/c12"
        android:ems="10"
        android:hint="@string/name1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_elg" />

    <EditText
        android:id="@+id/age1"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@color/c12"
        android:ems="10"
        android:hint="@string/age1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name1" />

    <Button
        android:id="@+id/btn_calculation"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_light"
        android:onClick="next"
        android:text="@string/btn_checkeligibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age1" />

</androidx.constraintlayout.widget.ConstraintLayout>