<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mad"
    android:orientation="vertical"
    tools:context=".registration">

    <EditText
        android:id="@+id/username"
        android:layout_width="389dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/c12"
        android:hint="@string/username"
        android:textColor="@color/c13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sign" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="391dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/c12"
        android:hint="@string/password1"
        android:textColor="@color/c13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/sign"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:background="@color/c6"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <TextView
        android:id="@+id/txt_unpa"
        android:layout_width="331dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_unpa"
        android:textColor="@color/c7"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign" />

    <TextView
        android:id="@+id/txt_sign"
        android:layout_width="170dp"
        android:layout_height="67dp"
        android:layout_marginTop="192dp"
        android:fontFamily="serif"
        android:text="@string/txt_sign"
        android:textColor="@color/c7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>